--- a/TPC/TPC1/Exercicio1-Gambiarra/exerc1.html
+++ b/TPC/TPC1/Exercicio1-Gambiarra/exerc1.html
@@ -39,9 +39,9 @@ main()
 }
 </script>
 
-<script type="text/javascript" src="../../Common/webgl-utils.js"></script>
-<script type="text/javascript" src="../../Common/initShaders.js"></script>
-<script type="text/javascript" src="../../Common/MV.js"></script>
+<script type="text/javascript" src="../../../Common/webgl-utils.js"></script>
+<script type="text/javascript" src="../../../Common/initShaders.js"></script>
+<script type="text/javascript" src="../../../Common/MV.js"></script>
 <script type="text/javascript" src="exerc1.js"></script>
 </head>   
 
