--- a/EP/EP1/objViewer.html
+++ b/EP/EP1/objViewer.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title>Simple OBJ Viewer</title>
+  <style>
+    /* make the body fill the window */
+    html, body {
+    margin: 0px;
+    width: 100%;
+    height: 100%;
+    /*overflow: hidden;*/
+    }
+    /* make any canvas fill its container */
+    canvas {
+    width: 100%;
+    height: 100%;
+    }
+  </style>
+  
+  <meta charset="utf-8" />
+  <title>Simple OBJ Viewer</title>
 </head>
 
 <script id="vertex-shader" type="x-shader/x-vertex">
