Objs centralizados na origem do canvas e definindo um tamanho mínimo para a altura e largura do canvas (512/512).

--- a/EP/EP1/objViewer.html
+++ b/EP/EP1/objViewer.html
@@ -15,7 +15,6 @@
     height: 100%;
     }
   </style>
-  
   <meta charset="utf-8" />
   <title>Simple OBJ Viewer</title>
 </head>
@@ -96,7 +95,7 @@ void main()
 
 <body>
 <p>
-<canvas id="gl-canvas" width="512" height="512">
+<canvas id="gl-canvas" width="512" height="512" min-width:"512" min-height:"512">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
 </p>
