--- a/EP/EP1/objViewer.html
+++ b/EP/EP1/objViewer.html
@@ -76,9 +76,9 @@ void main()
 }
 </script>
 
-<script type="text/javascript" src="../../Common/webgl-utils.js"></script>
-<script type="text/javascript" src="../../Common/initShaders.js"></script>
-<script type="text/javascript" src="../../Common/MV.js"></script>
+<script type="text/javascript" src="../Common/webgl-utils.js"></script>
+<script type="text/javascript" src="../Common/initShaders.js"></script>
+<script type="text/javascript" src="../Common/MV.js"></script>
 
 <script type="text/javascript" src="objViewer.js"></script>
 <script type="text/javascript" src="objReader.js"></script>
